Fixed overspawning on a few bodies.

--- a/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Kal.cfg
@@ -13,7 +13,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -40,7 +42,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -49,7 +51,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 0.300000012
-				spawnChance = 0.699999988
+				spawnChance = 0.0199999996
 				range = 150
 				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -59,7 +61,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.430000782
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -95,7 +97,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -122,7 +126,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -131,7 +135,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 0.5
+				spawnChance = 0.00999999978
 				range = 150
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
@@ -141,7 +145,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.430000395
+				maxNormalDeviance = 0.430000782
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -177,7 +181,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -204,7 +210,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -213,7 +219,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 0.300000012
-				spawnChance = 0.125
+				spawnChance = 0.00999999978
 				range = 650
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
@@ -223,7 +229,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -259,7 +265,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -286,7 +294,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -295,7 +303,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.109999999
+				spawnChance = 0.00999999978
 				range = 900
 				populationMultiplier = 1
 				minScale = 0.300000012,0.300000012,0.300000012
@@ -303,9 +311,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				scaleRandomness = 0.5
 				cutoffScale = 0.300000012
 				steepPower = 20
-				steepContrast = 1
+				steepContrast = 4.5
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.32000038
+				maxNormalDeviance = 0.320001125
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -316,7 +324,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod1
-						range = 60
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
@@ -324,7 +332,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Dres/medvar2lod2
-						range = 120
+						range = 120.000008
 						MaterialOverride
 						{
 						}
@@ -341,7 +349,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -368,7 +378,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -385,9 +395,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				scaleRandomness = 0.5
 				cutoffScale = 0.639999986
 				steepPower = 20
-				steepContrast = 1
+				steepContrast = 6
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.160000309
+				maxNormalDeviance = 0.160000622
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -423,7 +433,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -450,7 +462,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -459,7 +471,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 8.51000023
-				spawnChance = 0.200000003
+				spawnChance = 0.0199999996
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.400000006,0.400000006,0.400000006
@@ -469,7 +481,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 20
 				steepContrast = 1
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.160000309
+				maxNormalDeviance = 0.160000622
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -505,7 +517,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -532,7 +546,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1.70000005
 				_Hapke = 0.200000003
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_Color = 0.804,0.847,0.894, 1
+				_Color = 0.80400002,0.847000003,0.893999994,1
 				_CullMode = 2
 				Keywords
 				{
@@ -540,8 +554,8 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 10
-				spawnChance = 0.125
+				seed = 10.1999998
+				spawnChance = 0.0799999982
 				range = 2000
 				populationMultiplier = 1
 				minScale = 0.400000006,0.400000006,0.400000006
@@ -549,9 +563,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				scaleRandomness = 0.5
 				cutoffScale = 0.639999986
 				steepPower = 20
-				steepContrast = 1
+				steepContrast = 3
 				steepMidpoint = 0.899999976
-				maxNormalDeviance = 0.160000309
+				maxNormalDeviance = 0.160000935
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
