--- a/GameData/OuterParallax/MPE/_Scatters/Vant.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Vant.cfg
@@ -13,7 +13,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -49,9 +51,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 14.1999998
-				spawnChance = 1
+				spawnChance = 0.75
 				range = 150
-				populationMultiplier = 120
+				populationMultiplier = 3
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -59,7 +61,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -95,7 +97,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -131,9 +135,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 10.6000004
-				spawnChance = 1
+				spawnChance = 0.75
 				range = 150
-				populationMultiplier = 120
+				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -141,7 +145,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -177,7 +181,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -197,15 +203,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.43
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1.2,1.2,1.2,1
-				_FresnelColor = 0.15,0.15,0.15,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1.20000005,1.20000005,1.20000005,1
 				_CullMode = 2
 				Keywords
 				{
@@ -213,18 +218,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 9.997
-				spawnChance = 0.8
+				seed = 9.99699974
+				spawnChance = 0.5
 				range = 650
-				populationMultiplier = 40
+				populationMultiplier = 2
 				minScale = 0.125,0.125,0.125
-				maxScale = 0.175,0.175,0.175
+				maxScale = 0.174999997,0.174999997,0.174999997
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.30000037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -249,9 +254,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
@@ -263,7 +265,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -299,9 +303,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 9.31000042
-				spawnChance = 0.800000012
+				spawnChance = 0.0799999982
 				range = 900
-				populationMultiplier = 5
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
@@ -309,7 +313,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.271442503
+				maxNormalDeviance = 0.27144286
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -345,7 +349,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 5000
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 10000
 			}
 			SubdivisionSettings
 			{
@@ -381,9 +387,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5.9000001
-				spawnChance = 1
+				spawnChance = 0.0199999996
 				range = 1650
-				populationMultiplier = 6
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
@@ -391,7 +397,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.30000037
+				maxNormalDeviance = 0.300000757
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
