--- a/GameData/OuterParallax/MPE/_Scatters/Zore.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Zore.cfg
@@ -13,7 +13,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 40
 				frustumCullingScreenMargin = -45
-				maxObjects = 2000
+				maxRenderableObjectsLOD0 = 2500
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 2500
 			}
 			SubdivisionSettings
 			{
@@ -40,7 +42,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1
 				_Hapke = 2
 				_FresnelColor = 0.0500000007,0.0500000007,0.0500000007,1
-				_Color = 1.1,1.1,1.1,1
+				_Color = 1.10000002,1.10000002,1.10000002,1
 				_CullMode = 2
 				Keywords
 				{
@@ -49,9 +51,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 2.9000001
-				spawnChance = 1
+				spawnChance = 0.200000003
 				range = 400
-				populationMultiplier = 10
+				populationMultiplier = 1
 				minScale = 0.0500000007,0.0199999996,0.0500000007
 				maxScale = 0.699999988,0.150000006,0.699999988
 				scaleRandomness = 0.5
@@ -59,12 +61,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.70000024
+				maxNormalDeviance = 0.700000763
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
-				coloredByTerrain = false
+				coloredByTerrain = False
 				LODs
 				{
 					LOD
@@ -102,7 +104,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 0
 				frustumCullingScreenMargin = -45
-				maxObjects = 2000
+				maxRenderableObjectsLOD0 = 2500
+				maxRenderableObjectsLOD1 = 2500
+				maxRenderableObjectsLOD2 = 2500
 			}
 			SubdivisionSettings
 			{
@@ -129,7 +133,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				_BumpScale = 1
 				_Hapke = 2
 				_FresnelColor = 0.0500000007,0.0500000007,0.0500000007,1
-				_Color = 1.1,1.1,1.1,1
+				_Color = 1.10000002,1.10000002,1.10000002,1
 				_CullMode = 2
 				Keywords
 				{
@@ -138,9 +142,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 2.21099997
-				spawnChance = 0.3
+				spawnChance = 0.100000001
 				range = 700
-				populationMultiplier = 10
+				populationMultiplier = 1
 				minScale = 0.5,0.0199999996,0.5
 				maxScale = 1,0.400000006,1
 				scaleRandomness = 0.5
@@ -148,12 +152,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.7
+				maxNormalDeviance = 0.700000525
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
-				coloredByTerrain = false
+				coloredByTerrain = False
 				LODs
 				{
 					LOD
@@ -191,7 +195,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 39.2857132
 				frustumCullingScreenMargin = -20
-				maxObjects = 800
+				maxRenderableObjectsLOD0 = 800
+				maxRenderableObjectsLOD1 = 800
+				maxRenderableObjectsLOD2 = 800
 			}
 			SubdivisionSettings
 			{
@@ -227,9 +233,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 2.83800006
-				spawnChance = 0.0299999993
+				spawnChance = 0.00999999978
 				range = 2750
-				populationMultiplier = 5
+				populationMultiplier = 1
 				minScale = 1,0.600000024,1
 				maxScale = 3,2,3
 				scaleRandomness = 0.5
@@ -237,7 +243,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.180000663
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -278,9 +284,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			collisionLevel = 1
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 30
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -300,7 +308,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularPower = 15
+				_SpecularPower = 32
 				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
@@ -316,17 +324,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 9.30000019
-				spawnChance = 0.649999976
-				range = 200
-				populationMultiplier = 100
+				spawnChance = 0.449999988
+				range = 150
+				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
-				cutoffScale = 0.0500000007
+				cutoffScale = 0.360000014
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -337,7 +345,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
-						range = 15.000001
+						range = 1.19999993
 						MaterialOverride
 						{
 						}
@@ -345,7 +353,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
-						range = 30.0000019
+						range = 4.79999971
 						MaterialOverride
 						{
 						}
@@ -362,7 +370,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 250
+				maxRenderableObjectsLOD1 = 1000
+				maxRenderableObjectsLOD2 = 2000
 			}
 			SubdivisionSettings
 			{
@@ -372,7 +382,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				noiseType = simplexPerlin
 				inverted = False
-				frequency = 100
+				frequency = 400
 				octaves = 6
 				lacunarity = 2
 				seed = 1
@@ -398,9 +408,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 9.86999989
-				spawnChance = 0.649999976
-				range = 220
-				populationMultiplier = 120
+				spawnChance = 0.449999988
+				range = 150
+				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -419,7 +429,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod1
-						range = 15
+						range = 15.000001
 						MaterialOverride
 						{
 						}
@@ -427,7 +437,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Dres/smallvar2lod2
-						range = 30
+						range = 30.0000019
 						MaterialOverride
 						{
 						}
@@ -447,9 +457,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			collisionLevel = 2
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 25
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -485,19 +497,19 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 3.5
-				spawnChance = 0.600000024
+				spawnChance = 0.100000001
 				range = 650
-				populationMultiplier = 22
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
-				steepPower = 8
+				steepPower = 0
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
 				maxNormalDeviance = 0.700000286
 				minAltitude = -1000
-				maxAltitude = 999999
+				maxAltitude = 99999
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
 				coloredByTerrain = False
@@ -506,7 +518,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 20
+						range = 10.000001
 						MaterialOverride
 						{
 						}
@@ -514,7 +526,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 40
+						range = 20.0000019
 						MaterialOverride
 						{
 						}
@@ -536,7 +548,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -546,7 +560,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				noiseType = simplexPerlin
 				inverted = False
-				frequency = 100
+				frequency = 400
 				octaves = 6
 				lacunarity = 2
 				seed = 1
@@ -572,9 +586,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 15.5
-				spawnChance = 0.75
+				spawnChance = 0.0500000007
 				range = 900
-				populationMultiplier = 12
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -582,7 +596,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -618,12 +632,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		{
 			name = LargeRocksVar1
 			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
-			collisionLevel = 2
+			collisionLevel = 3
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 7.5
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -659,9 +675,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 33.0200005
-				spawnChance = 1
+				spawnChance = 0.0299999993
 				range = 2000
-				populationMultiplier = 3
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
@@ -669,7 +685,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -680,7 +696,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
-						range = 120
+						range = 18
 						MaterialOverride
 						{
 						}
@@ -688,7 +704,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
-						range = 240
+						range = 36
 						MaterialOverride
 						{
 						}
@@ -705,12 +721,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		{
 			name = LargeRocksVar2
 			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
-			collisionLevel = 2
+			collisionLevel = 3
 			Optimizations
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -720,7 +738,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				noiseType = simplexPerlin
 				inverted = False
-				frequency = 100
+				frequency = 400
 				octaves = 6
 				lacunarity = 2
 				seed = 1
@@ -746,9 +764,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 8.69999981
-				spawnChance = 0.600000024
+				spawnChance = 0.0500000007
 				range = 2000
-				populationMultiplier = 15
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.300000012,0.300000012,0.300000012
 				scaleRandomness = 0.5
@@ -756,7 +774,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -792,12 +810,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		{
 			name = HugeRocksVar1
 			model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod0
-			collisionLevel = 1
+			collisionLevel = 4
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 13.75
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -833,9 +853,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 14.8100004
-				spawnChance = 0.5
+				spawnChance = 0.0199999996
 				range = 2000
-				populationMultiplier = 12
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
@@ -843,7 +863,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.700000286
+				maxNormalDeviance = 0.700000823
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -854,7 +874,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod1
-						range = 120
+						range = 33
 						MaterialOverride
 						{
 						}
@@ -862,7 +882,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod2
-						range = 240
+						range = 66
 						MaterialOverride
 						{
 						}
