--- a/GameData/OuterParallax/MPE/_Scatters/Archae.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Archae.cfg
@@ -13,7 +13,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -49,9 +51,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 0.389999986
-				spawnChance = 0.75
+				spawnChance = 0.5
 				range = 150
-				populationMultiplier = 300
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -59,7 +61,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.916565716
+				maxNormalDeviance = 0.425432891
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -95,7 +97,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -131,9 +135,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 3.33999991
-				spawnChance = 0.699999988
+				spawnChance = 0.300000012
 				range = 650
-				populationMultiplier = 150
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
@@ -141,7 +145,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.891944647
+				maxNormalDeviance = 0.891944766
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -177,7 +181,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -213,9 +219,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 7.0999999
-				spawnChance = 0.649999976
-				range = 1600
-				populationMultiplier = 65
+				spawnChance = 0.0500000007
+				range = 950
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
@@ -223,7 +229,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.347520262
+				maxNormalDeviance = 0.347521037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -234,7 +240,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
-						range = 60.0000038
+						range = 60.0000076
 						MaterialOverride
 						{
 						}
@@ -242,7 +248,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
-						range = 120.000008
+						range = 120.000015
 						MaterialOverride
 						{
 						}
@@ -259,7 +265,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -295,9 +303,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 7.13999987
-				spawnChance = 0.699999988
-				range = 1600
-				populationMultiplier = 8
+				spawnChance = 0.00999999978
+				range = 950
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -305,7 +313,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.896156549
+				maxNormalDeviance = 0.896156788
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -316,7 +324,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod1
-						range = 15.000001
+						range = 15.0000067
 						MaterialOverride
 						{
 						}
@@ -324,7 +332,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/hugevar1lod2
-						range = 30.0000019
+						range = 30.0000038
 						MaterialOverride
 						{
 						}
@@ -341,7 +349,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			{
 				frustumCullingStartRange = 50
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -377,9 +387,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5.30000019
-				spawnChance = 0.400000006
-				range = 1650
-				populationMultiplier = 6
+				spawnChance = 0.00999999978
+				range = 950
+				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
@@ -387,7 +397,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 3
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.44814086
+				maxNormalDeviance = 0.448141605
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -421,9 +431,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			collisionLevel = 3
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 50.0000038
 				frustumCullingScreenMargin = -40
-				maxObjects = 10000
+				maxRenderableObjectsLOD0 = 500
+				maxRenderableObjectsLOD1 = 2000
+				maxRenderableObjectsLOD2 = 3000
 			}
 			SubdivisionSettings
 			{
@@ -459,9 +471,9 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5.80000019
-				spawnChance = 0.5
-				range = 2000
-				populationMultiplier = 5
+				spawnChance = 0.00999999978
+				range = 1400
+				populationMultiplier = 1
 				minScale = 4,4,4
 				maxScale = 7,7,7
 				scaleRandomness = 0.5
@@ -469,7 +481,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.896156549
+				maxNormalDeviance = 0.896156669
 				minAltitude = 15
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -480,7 +492,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Tylo/largeslabs1
-						range = 400
+						range = 400.000031
 						MaterialOverride
 						{
 						}
